--- a/config/euroc/euroc_config.yaml
+++ b/config/euroc/euroc_config.yaml
@@ -2,8 +2,8 @@
 
 #common parameters
 imu_topic: "/imu0"
-#image_topic: "/cam0/image_raw"
-image_topic: "/image_raw"
+image_topic: "/cam0/image_raw"
+#image_topic: "/image_raw"
 output_path: "/home/zhouchang/"
 
 #camera calibration 
@@ -64,7 +64,7 @@ gyr_w: 2.0e-6       # gyroscope bias random work noise standard deviation.     #
 g_norm: 9.81007     # gravity magnitude
 
 #loop closure parameters
-loop_closure: 1                    # start loop closure
+loop_closure: 0                    # start loop closure
 load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
 fast_relocalization: 0             # useful in real-time and large project
 pose_graph_save_path: "/home/zhouchang/result/" # save and load path
